fixed the top problem now to fix scrollbar

--- a/client/style.css
+++ b/client/style.css
@@ -12,17 +12,22 @@ body {
 }
 
 #app {
-  width: 90vw;
-  height: 90vh;
+  width: 100vw;
+  height: 94vh;
   background: #343541;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+
 }
 
 #chat_container {
+
+  position: absolute;
+  top: 0px;
+
   flex: 1;
   width: 100%;
   height: 100%;
